# hardly-working

./: Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  task.rs
tests/: task_test.rs
