[package]
name = "hardly-working"
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Kruger <bskruger2002@gmail.com>"]
description = "Working hard or hardly working - A simple todo list CLI"
readme = "README.md"
license = "MIT"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]
repository = "https://github.com/benjamin-kruger/hardly-working"

[[bin]]
name = "hw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
